--- a/templates/html/.partials/type.html
+++ b/templates/html/.partials/type.html
@@ -1,14 +1,16 @@
+{% macro type(prop) %}
 {{prop.type}}
-{{~#if prop.items}}
+{%- if prop.items -%}
   &lt;
-  {{~#if prop.items.type}}
-    {{~prop.items.type}}
-  {{~else if (isArray prop.items)}}
-    {{~#each prop.items}}
-      {{~>type prop=.}}{{#unless @last}}, {{/unless}}
-    {{~/each}}
-  {{~else~}}
+  {%- if prop.items.type -%}
+    {{- prop.items.type -}}
+  {% elif prop.items | isArray -%}
+    {%- for p in prop.items -%}
+      {{- type(p) -}}{% if not loop.last %}, {% endif %}
+    {%- endfor -%}
+  {%- else -%}
     Unknown
-  {{~/if~}}
+  {%- endif -%}
   &gt;
-{{~/if}}
+{%- endif -%}
+{% endmacro %}
